Added more the HTML

--- a/web/app/views/welcome/index.html.erb
+++ b/web/app/views/welcome/index.html.erb
@@ -40,6 +40,8 @@
       </p>
 
       <div class = "container-fluid" id="slider-range2"></div>
+      <br>
+      <a href="#" class="submitButton"> Submit </a>
     </div>
 
   </body>
