--- a/flask/templates/submit.html
+++ b/flask/templates/submit.html
@@ -21,7 +21,7 @@
                 {{ form.tempOne(class="form-control form-control-lg") }}
             </div>
             <div class="form-group">
-                {{ form.tempTwo(class_="form-control-label") }}
+                {{ form.tempTwo.label(class_="form-control-label") }}
                 {{ form.tempTwo(class="form-control form-control-lg") }}
             </div>
         </fieldset>
