--- a/flask/templates/submit.html
+++ b/flask/templates/submit.html
@@ -6,7 +6,7 @@
             <legend class="border-bottom mb-4">Submit FastA</legend>
             <div class="form-group">
                 {{ form.fastA.label(class_="form-control-label") }}
-                {{ form.fastA(class="form-control form-control-lg" rows="3") }}
+                {{ form.fastA(class="form-control form-control-lg", rows="3") }}
             </div>
             <div class="form-group">
                 {{ form.lengthOne.label(class_="form-control-label") }}
