--- a/flask/templates/submit.html
+++ b/flask/templates/submit.html
@@ -10,7 +10,7 @@
             </div>
             <div class="form-group">
                 {{ form.lengthOne.label(class_="form-control-label") }}
-                {{ form.lengthOne(class="form-control form-control-lg" aria-describedby="lenghtOneBlock") }}
+                {{ form.lengthOne(class="form-control form-control-lg", aria-describedby="lenghtOneBlock") }}
                 <small id="lenghtOneBlock" class="form-text text-muted">
                     Should not be smaller than X
                 </small>
