--- a/flask/templates/submit.html
+++ b/flask/templates/submit.html
@@ -10,8 +10,8 @@
             </div>
             <div class="form-group">
                 {{ form.lengthOne.label(class_="form-control-label") }}
-                {{ form.lengthOne(class="form-control form-control-lg") }}
-                <small id="lenghtOneBlock" class="form-text text-muted">
+                {{ form.lengthOne(class="form-control mx-sm-3") }}
+                <small id="lenghtOneBlock" class="text-muted">
                     Should not be smaller than X
                 </small>
             </div>
