--- a/flask/templates/submit.html
+++ b/flask/templates/submit.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="content=section">
-    <form method="POST" action="">
+    <form class="form-inline" method="POST" action="">
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Submit FastA</legend>
             <div class="form-group">
