--- a/flask/templates/submit.html
+++ b/flask/templates/submit.html
@@ -7,7 +7,7 @@
             <div class="form-group">
                 {{ form.fastA.label(class_="form-control-label") }}
                 {{ form.fastA(class="form-control form-control-lg", rows="3") }}
-            </div>
+            </div><br>
             <div class="form-group">
                 {{ form.lengthOne.label(class_="form-control-label") }}
                 {{ form.lengthOne(class="form-control mx-sm-3") }}
@@ -18,7 +18,7 @@
             <div class="form-group">
                 {{ form.lengthTwo.label(class_="form-control-label") }}
                 {{ form.lengthTwo(class="form-control form-control-lg") }}
-            </div>
+            </div><br>
             <div class="form-group">
                 {{ form.tempOne.label(class_="form-control-label") }}
                 {{ form.tempOne(class="form-control form-control-lg") }}
