--- a/flask/templates/submit.html
+++ b/flask/templates/submit.html
@@ -4,22 +4,22 @@
     <form class="form-inline" method="POST" action="">
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Submit FastA</legend>
-            <div class="form-group">
+            <div class="form-group col-lg-12">
                 {{ form.fastA.label(class_="form-control-label") }}
                 {{ form.fastA(class="form-control form-control-lg", rows="3") }}
             </div><br>
-            <div class="form-group">
+            <div class="form-group col-md-6">
                 {{ form.lengthOne.label(class_="form-control-label") }}
-                {{ form.lengthOne(class="form-control mx-sm-3") }}
+                {{ form.lengthOne(class="form-control") }}
                 <small id="lenghtOneBlock" class="text-muted">
                     Should not be smaller than X
                 </small>
             </div>
-            <div class="form-group">
+            <div class="form-group col-md-6">
                 {{ form.lengthTwo.label(class_="form-control-label") }}
                 {{ form.lengthTwo(class="form-control form-control-lg") }}
             </div><br>
-            <div class="form-group">
+            <div class="form-group col-md-6">
                 {{ form.tempOne.label(class_="form-control-label") }}
                 {{ form.tempOne(class="form-control form-control-lg") }}
             </div>
@@ -28,7 +28,7 @@
                 {{ form.tempTwo(class="form-control form-control-lg") }}
             </div>
         </fieldset>
-        <div class="form-group">
+        <div class="form-group col-md-6">
             {{ form.submit(class="btn btn-outline-info") }}
         </div>
     </form>
