--- a/flask/templates/submit.html
+++ b/flask/templates/submit.html
@@ -7,7 +7,7 @@
             <div class="form-group col-lg-12">
                 {{ form.fastA.label(class_="form-control-label") }}
                 {{ form.fastA(class="form-control form-control-lg") }}
-            </div><
+            </div>
             <div class="form-group col-md-6">
                 {{ form.lengthOne.label(class_="form-control-label") }}
                 {{ form.lengthOne(class="form-control") }}
