--- a/flask/templates/submit.html
+++ b/flask/templates/submit.html
@@ -29,7 +29,7 @@
                     Should not be smaller than X
                 </small>
             </div>
-            <div class="form-group">
+            <div class="form-group col-md-6">
                 {{ form.tempTwo.label(class_="form-control-label") }}
                 {{ form.tempTwo(class="form-control form-control-lg") }}
                 <small class="text-muted">
