--- a/flask/templates/submit.html
+++ b/flask/templates/submit.html
@@ -6,7 +6,7 @@
             <legend class="border-bottom mb-4">Submit FastA</legend>
             <div class="form-group col-lg-12">
                 {{ form.fastA.label(class_="form-control-label") }}
-                {{ form.fastA(class="form-control form-control-lg") }}
+                {{ form.fastA(class="form-control-file form-control-lg") }}
             </div>
             <div class="form-group col-md-6">
                 {{ form.lengthOne.label(class_="form-control-label") }}
