--- a/flask/templates/submit.html
+++ b/flask/templates/submit.html
@@ -6,7 +6,7 @@
             <legend class="border-bottom mb-4">Submit FastA</legend>
             <div class="form-group col-lg-12">
                 {{ form.fastA.label(class_="form-control-label") }}
-                {{ form.fastA(class="form-control-file form-control-lg") }}
+                {{ form.fastA(class="form-control-file") }}
             </div>
             <div class="form-group col-md-6">
                 {{ form.lengthOne.label(class_="form-control-label") }}
@@ -17,21 +17,21 @@
             </div>
             <div class="form-group col-md-6">
                 {{ form.lengthTwo.label(class_="form-control-label") }}
-                {{ form.lengthTwo(class="form-control form-control-lg") }}
+                {{ form.lengthTwo(class="form-control") }}
                 <small class="text-muted">
                     Should not be larger than X
                 </small>
             </div>
             <div class="form-group col-md-6">
                 {{ form.tempOne.label(class_="form-control-label") }}
-                {{ form.tempOne(class="form-control form-control-lg") }}
+                {{ form.tempOne(class="form-control") }}
                 <small class="text-muted">
                     Should not be smaller than X
                 </small>
             </div>
             <div class="form-group col-md-6">
                 {{ form.tempTwo.label(class_="form-control-label") }}
-                {{ form.tempTwo(class="form-control form-control-lg") }}
+                {{ form.tempTwo(class="form-control") }}
                 <small class="text-muted">
                     Should not be larger than X
                 </small>
