--- a/flask/templates/submit.html
+++ b/flask/templates/submit.html
@@ -6,9 +6,7 @@
             <legend class="border-bottom mb-4">Submit FastA</legend>
             <div class="form-group col-lg-12">
                 {{ form.fastA.label(class_="form-control-label") }}
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3">
-                {{ form.fastA(class="form-control-file") }}
-                </textarea>
+                {{ form.fastA(class="form-control-file" rows="3") }}
             </div>
             <div class="form-group col-md-6">
                 {{ form.lengthOne.label(class_="form-control-label") }}
