--- a/flask/templates/submit.html
+++ b/flask/templates/submit.html
@@ -4,32 +4,32 @@
     <form class="form-inline" method="POST" action="">
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Submit FastA</legend>
-            <div class="form-group col-lg-12">
+            <div class="form-group col-lg-12 mb-4">
                 {{ form.fastA.label(class_="form-control-label") }}
-                {{ form.fastA(class="form-control-file" rows="3") }}
+                {{ form.fastA(class="form-control-file", rows="4") }}
             </div>
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-6 mb-4">
                 {{ form.lengthOne.label(class_="form-control-label") }}
                 {{ form.lengthOne(class="form-control") }}
                 <small class="text-muted">
                     Should not be smaller than X
                 </small>
             </div>
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-6 mb-4">
                 {{ form.lengthTwo.label(class_="form-control-label") }}
                 {{ form.lengthTwo(class="form-control") }}
                 <small class="text-muted">
                     Should not be larger than X
                 </small>
             </div>
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-6 mb-4">
                 {{ form.tempOne.label(class_="form-control-label") }}
                 {{ form.tempOne(class="form-control") }}
                 <small class="text-muted">
                     Should not be smaller than X
                 </small>
             </div>
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-6 mb-4">
                 {{ form.tempTwo.label(class_="form-control-label") }}
                 {{ form.tempTwo(class="form-control") }}
                 <small class="text-muted">
