--- a/flask/templates/submit.html
+++ b/flask/templates/submit.html
@@ -8,33 +8,37 @@
                 {{ form.fastA.label(class_="form-control-label") }}
                 {{ form.fastA(class="form-control", rows="4", cols="MAX") }}
             </div>
-            <div class="form-group col-sm-3 mb-4">
-                {{ form.lengthOne.label(class_="form-control-label") }}
-                {{ form.lengthOne(class="form-control") }}
-                <small class="text-muted">
-                    Should not be smaller than X
-                </small>
+            <div class="row">
+                <div class="form-group col-sm-6 mb-4">
+                    {{ form.lengthOne.label(class_="form-control-label") }}
+                    {{ form.lengthOne(class="form-control") }}
+                    <small class="text-muted">
+                        Should not be smaller than X
+                    </small>
+                </div>
+                <div class="form-group col-sm-6 mb-4">
+                    {{ form.lengthTwo.label(class_="form-control-label") }}
+                    {{ form.lengthTwo(class="form-control") }}
+                    <small class="text-muted">
+                        Should not be larger than X
+                    </small>
+                </div>
             </div>
-            <div class="form-group col-sm-3 mb-4">
-                {{ form.lengthTwo.label(class_="form-control-label") }}
-                {{ form.lengthTwo(class="form-control") }}
-                <small class="text-muted">
-                    Should not be larger than X
-                </small>
-            </div>
-            <div class="form-group col-sm-3 mb-4">
-                {{ form.tempOne.label(class_="form-control-label") }}
-                {{ form.tempOne(class="form-control") }}
-                <small class="text-muted">
-                    Should not be smaller than X
-                </small>
-            </div>
-            <div class="form-group col-sm-3 mb-4">
-                {{ form.tempTwo.label(class_="form-control-label") }}
-                {{ form.tempTwo(class="form-control") }}
-                <small class="text-muted">
-                    Should not be larger than X
-                </small>
+            <div class="row">
+                <div class="form-group col-sm-3 mb-4">
+                    {{ form.tempOne.label(class_="form-control-label") }}
+                    {{ form.tempOne(class="form-control") }}
+                    <small class="text-muted">
+                        Should not be smaller than X
+                    </small>
+                </div>
+                <div class="form-group col-sm-3 mb-4">
+                    {{ form.tempTwo.label(class_="form-control-label") }}
+                    {{ form.tempTwo(class="form-control") }}
+                    <small class="text-muted">
+                        Should not be larger than X
+                    </small>
+                </div>
             </div>
         </fieldset>
         <div class="form-group col-md-6">
