--- a/flask/templates/submit.html
+++ b/flask/templates/submit.html
@@ -6,7 +6,7 @@
             <legend class="border-bottom mb-4">Submit FastA</legend>
             <div class="form-group col-lg-12 mb-4">
                 {{ form.fastA.label(class_="form-control-label") }}
-                {{ form.fastA(class="form-control", rows="4", width:100% ) }}
+                {{ form.fastA(class="form-control", rows="4", width=100%) }}
             </div>
             <div class="row">
                 <div class="form-group col-md-6 mb-4">
