--- a/flask/templates/home.html
+++ b/flask/templates/home.html
@@ -5,8 +5,9 @@
 </div>
 <div class="submission container-fluid">
     <h3> Hey, my name is Alex and I haven't written this yet! :) </h3>
+    <a href="/flask/static/rna.png"></a>
     <div class="container-fluid">
-      <h3> This is all test info, ignore it </h3>
+        <h3> This is all test info, ignore it </h3>
         {% for data in data %}
         <h4> Results of {{ data.fastA }} </h4><br>
         <p> with length between {{ data.lengthOne }} and {{data.lengthTwo }} <br>
