--- a/flask/templates/home.html
+++ b/flask/templates/home.html
@@ -5,7 +5,7 @@
 </div>
 <div class="submission container-fluid">
     <h3> Hey, my name is Alex and I haven't written this yet! :) </h3>
-    <img src="templates/rna.png">
+    <img src="static/rna.png">
     <div class="container-fluid">
         <h3> This is all test info, ignore it </h3>
         {% for data in data %}
