Added Citation Page

--- a/flask/templates/layout.html
+++ b/flask/templates/layout.html
@@ -33,6 +33,12 @@
                     <div class="navbar-nav">
                         <a class="nav-item nav-link" href="/about">About</a>
                     </div>
+                    <div class="navbar-nav">
+                        <a class="nav-item nav-link" href="/cite">Cite</a>
+                    </div>
+                    <div class="navbar-nav">
+                        <a class="nav-item nav-link" href="https://github.com/amv69/BIOSC1640/tree/server">GitHub</a>
+                    </div>
                 </div>
             </div>
         </nav>
