--- a/flask/templates/home.html
+++ b/flask/templates/home.html
@@ -3,9 +3,16 @@
 <div class="container-fluid" style="padding-bottom: 4%;">
     <h1>Oligonucelotide Finder</h1>
 </div>
-<div class="submission container-fluid">
-    <h3> Hey, my name is Alex and I haven't written this yet! :) </h3>
-    <img src="static/rna.png">
+<div class="row">
+    <div class="container-fluid col-md-6">
+        <h3> 'Primer? I hardly even know her' Is a novel Bioinformatics algorithm used to design primers for rRNA
+            from the Lee Lab (University of Pittsburgh) Incase you forgot what DNA looks like, look to the right.<br>
+            <a href="/submit.html">Click here to get started!</a>
+        </h3>
+        <div class="container-fluid col-md-6">
+            <img src="static/rna.png">
+        </div>
+    </div>
     <div class="container-fluid">
         <h3> This is all test info, ignore it </h3>
         {% for data in data %}
