--- a/flask/templates/home.html
+++ b/flask/templates/home.html
@@ -4,12 +4,12 @@
     <h1>Oligonucelotide Finder</h1>
 </div>
 <div class="row">
-    <div class="container-fluid col-md-6">
+    <div class="container-fluid col">
         <h3> 'Primer? I hardly even know her' Is a novel Bioinformatics algorithm used to design primers for rRNA
             from the Lee Lab (University of Pittsburgh) Incase you forgot what DNA looks like, look to the right.<br>
             <a href="/submit.html">Click here to get started!</a>
         </h3>
-        <div class="container-fluid col-md-6">
+        <div class="container-fluid col">
             <img src="static/rna.png">
         </div>
     </div>
