--- a/flask/templates/home.html
+++ b/flask/templates/home.html
@@ -9,8 +9,8 @@
             from the Lee Lab (University of Pittsburgh) Incase you forgot what DNA looks like, look to the right.<br>
             <a href="/submit.html">Click here to get started!</a>
         </h3>
-        <div class="container-fluid col">
-            <img src="static/rna.png">
+        <div class="container-fluid col>
+            <img src="static/rna.png" width="500" height="600">
         </div>
     </div>
     <div class="container-fluid">
