--- a/flask/templates/home.html
+++ b/flask/templates/home.html
@@ -1,16 +1,16 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="container-fluid" style="padding-bottom: 4%;">
-    <h1>Oligonucelotide Finder</h1>
+    <h1><b>Oligonucelotide Finder</b></h1>
 </div>
 <div class="row">
-    <div class="container-fluid col-md">
-        <h3> 'Primer? I hardly even know her' Is a novel Bioinformatics algorithm used to design primers for rRNA
+    <div class="container-fluid col">
+        <h3><i> 'Primer? I hardly even know her'</i> Is a novel Bioinformatics algorithm used to design primers for rRNA
             from the Lee Lab (University of Pittsburgh) Incase you forgot what DNA looks like, look to the right.<br>
             <a href="/submit.html">Click here to get started!</a>
         </h3>
     </div>
-    <div class="container-fluid col-md">
+    <div class="container-fluid col">
         <img src="static/rna.png" width="500" height="600">
     </div>
 </div>
