--- a/flask/templates/home.html
+++ b/flask/templates/home.html
@@ -4,13 +4,14 @@
     <h1><b>Oligonucelotide Finder</b></h1>
 </div>
 <div class="row">
-    <div class="container-fluid col">
-        <h3><i> 'Primer? I hardly even know her'</i> Is a novel Bioinformatics algorithm used to design primers for rRNA
-            from the Lee Lab (University of Pittsburgh) Incase you forgot what DNA looks like, look to the right.<br>
+    <div class="container col">
+        <h3><i> Primer? I hardly even know her</i> is a novel Bioinformatics algorithm used to design primers for rRNA
+            from the Dr. Miler Lee Lab (University of Pittsburgh) Incase you forgot what DNA looks like, look to the right.
+            <br><br>
             <a href="/submit.html">Click here to get started!</a>
         </h3>
     </div>
-    <div class="container-fluid col">
+    <div class="container col">
         <img src="static/rna.png" width="500" height="600">
     </div>
 </div>
