--- a/flask/templates/home.html
+++ b/flask/templates/home.html
@@ -9,6 +9,8 @@
             from the Dr. Miler Lee Lab (University of Pittsburgh) Incase you forgot what DNA looks like, look to the right.
             <br><br>
             <a href="/submit.html">Click here to get started!</a>
+            <p>You don't have to be crazy to do this but it does help. I'm sort of a softy, I couldn't shoot Bambi except with a camera. Maybe, just to play a little, we'll put a little tree here. Just take out whatever you don't want. It'll change your entire perspective. You have to allow the paint to break to make it beautiful.</p>
+            <p>That's what painting is all about. It should make you feel good when you paint. I sincerely wish for you every possible joy life could bring. There's nothing wrong with having a tree as a friend. Only think about one thing at a time. Don't get greedy. You can do anything your heart can imagine. That's a crooked tree. We'll send him to Washington.</p>
         </h3>
     </div>
     <div class="container col">
