--- a/flask/templates/home.html
+++ b/flask/templates/home.html
@@ -8,10 +8,9 @@
         <h3><i> Primer? I hardly even know her</i> is a novel Bioinformatics algorithm used to design primers for rRNA
             from the Dr. Miler Lee Lab (University of Pittsburgh) Incase you forgot what DNA looks like, look to the right.
             <br><br>
-            <a href="/submit.html">Click here to get started!</a><br>
-            <p>You don't have to be crazy to do this but it does help. I'm sort of a softy, I couldn't shoot Bambi except with a camera. Maybe, just to play a little, we'll put a little tree here. Just take out whatever you don't want. It'll change your entire perspective. You have to allow the paint to break to make it beautiful.</p>
-            <p>That's what painting is all about. It should make you feel good when you paint. I sincerely wish for you every possible joy life could bring. There's nothing wrong with having a tree as a friend. Only think about one thing at a time. Don't get greedy. You can do anything your heart can imagine. That's a crooked tree. We'll send him to Washington.</p>
-        </h3>
+            <a href="/submit.html">Click here to get started!</a> </h3><br>
+        <p>You don't have to be crazy to do this but it does help. I'm sort of a softy, I couldn't shoot Bambi except with a camera. Maybe, just to play a little, we'll put a little tree here. Just take out whatever you don't want. It'll change your entire perspective. You have to allow the paint to break to make it beautiful.</p>
+        <p>That's what painting is all about. It should make you feel good when you paint. I sincerely wish for you every possible joy life could bring. There's nothing wrong with having a tree as a friend. Only think about one thing at a time. Don't get greedy. You can do anything your heart can imagine. That's a crooked tree. We'll send him to Washington.</p>
     </div>
     <div class="container col mb-4">
         <img src="static/rna.png" width="500" height="600">
