--- a/flask/templates/home.html
+++ b/flask/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="container-fluid full-size" style="padding-bottom: 4%;">
+<div class="container-fluid full-size" align="center" style="padding-bottom: 4%;">
     <h1><b>Oligonucelotide Finder</b></h1>
 </div>
 <div class="row">
