--- a/flask/templates/submit.html
+++ b/flask/templates/submit.html
@@ -44,6 +44,10 @@
         <div class="form-group col-md-6">
             {{ form.submit(class="btn btn-outline-info") }}
         </div>
+        <div class="form-group col-md-12 mb-4">
+                {{ form.output.label(class_="form-control-label") }}
+                {{ form.output(class="form-control-file", rows="4") }}
+            </div>
     </form>
 </div>
 {% endblock content %}
