--- a/flask/templates/submit.html
+++ b/flask/templates/submit.html
@@ -47,8 +47,9 @@
         <div class="form-group col-md-12 mb-4">
                 {{ form.output.label(class_="form-control-label") }}
                 {{ form.output(class="form-control-file", rows="4") }}
-                {{ output }}
+
             </div>
     </form>
+    <p>{{ output }}</p>
 </div>
 {% endblock content %}
