--- a/flask/templates/submit.html
+++ b/flask/templates/submit.html
@@ -50,6 +50,6 @@
 
             </div>
     </form>
-    <p>{{ output }}</p>
+    <textarea rows="4">{{ output }}</textarea>{{ output }}
 </div>
 {% endblock content %}
