--- a/flask/templates/submit.html
+++ b/flask/templates/submit.html
@@ -2,6 +2,7 @@
 {% block content %}
 <div class="content=section">
     <form class="form" method="POST" action="">
+    	{{ form.hidden_tag()}}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Submit FastA</legend>
             <div class="form-group col-md-12 mb-4">
