--- a/flask/templates/submit.html
+++ b/flask/templates/submit.html
@@ -46,7 +46,8 @@
             {{ form.submit(class="btn btn-outline-info") }}
         </div>
     </form>
-    <p>Output</p><br>
-    <textarea class="form-control-file" rows="4">{{ output }}</textarea>
+    <p>Output:</p><br>
+    {{ output }}
+    <textarea class="form-control-file" rows="4">{{ output2 }}</textarea>
 </div>
 {% endblock content %}
