--- a/flask/templates/submit.html
+++ b/flask/templates/submit.html
@@ -47,7 +47,7 @@
         </div>
     </form>
     <p>Output:</p><br>
-    {{ output }}
-    <textarea class="form-control-file" rows="4">{{ output2 }}</textarea>
+
+    <textarea class="form-control-file" rows="4">{{ output }} <br> {{ output2 }}</textarea>
 </div>
 {% endblock content %}
