--- a/flask/templates/submit.html
+++ b/flask/templates/submit.html
@@ -48,6 +48,6 @@
     </form>
     <p>Output:</p><br>
 
-    <textarea class="form-control-file" rows="4">{{ output }} <br> {{ output2 }}</textarea>
+    <textarea class="form-control-file" rows="4">{{ output }} \t {{ output2 }}</textarea>
 </div>
 {% endblock content %}
