--- a/flask/templates/home.html
+++ b/flask/templates/home.html
@@ -5,7 +5,7 @@
 </div>
 <div class="row">
     <div class="container col mb-4" align="center">
-        <h3><i> Primer? I hardly even know her</i> is a novel Bioinformatics algorithm used to design primers for rRNA
+        <h3><i>Insert Project Name Here</i> is a novel Bioinformatics algorithm used to design primers for rRNA
             from the Dr. Miler Lee Lab (University of Pittsburgh) Incase you forgot what DNA looks like, look to the right.
             <br><br>
             <a href="/submit">Click here to get started!</a> </h3><br>
