--- a/flask/templates/submit.html
+++ b/flask/templates/submit.html
@@ -57,6 +57,39 @@
     </form>
     <p>Output:</p><br>
 
-    <textarea class="form-control-file" rows="4">{{ output }} &#10;&#13;{{ output2 }}</textarea>
+    <textarea class="form-control-file" rows="4" id="textArea">{{ output }} &#10;&#13;{{ output2 }}</textarea>
+    <button type="button" value="save" id="save">Save</button>
 </div>
 {% endblock content %}
+
+<script>
+	function saveTextAsFile() {
+  var textToWrite = document.getElementById('textArea').innerHTML;
+  var textFileAsBlob = new Blob([ textToWrite ], { type: 'text/plain' });
+  var fileNameToSaveAs = "ecc.plist";
+
+  var downloadLink = document.createElement("a");
+  downloadLink.download = fileNameToSaveAs;
+  downloadLink.innerHTML = "Download File";
+  if (window.webkitURL != null) {
+    // Chrome allows the link to be clicked without actually adding it to the DOM.
+    downloadLink.href = window.webkitURL.createObjectURL(textFileAsBlob);
+  } else {
+    // Firefox requires the link to be added to the DOM before it can be clicked.
+    downloadLink.href = window.URL.createObjectURL(textFileAsBlob);
+    downloadLink.onclick = destroyClickedElement;
+    downloadLink.style.display = "none";
+    document.body.appendChild(downloadLink);
+  }
+
+  downloadLink.click();
+}
+
+var button = document.getElementById('save');
+button.addEventListener('click', saveTextAsFile);
+
+function destroyClickedElement(event) {
+  // remove the link from the DOM
+  document.body.removeChild(event.target);
+}
+</script>
