--- a/flask/templates/submit.html
+++ b/flask/templates/submit.html
@@ -5,6 +5,7 @@
     	{{ form.hidden_tag()}}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Submit FastA</legend>
+            <input id="myFile" type="file"/>
             <div class="form-group col-md-12 mb-4">
                 {{ form.fastA.label(class_="form-control-label") }}
                 {{ form.fastA(class="form-control-file", rows="4") }}
@@ -63,17 +64,11 @@
 {% endblock content %}
 
 <script>
-	function download(){
-    var text = document.getElementById("my-textarea").value;
-    text = text.replace(/\n/g, "\r\n"); // To retain the Line breaks.
-    var blob = new Blob([text], { type: "text/plain"});
-    var anchor = document.createElement("a");
-    anchor.download = "my-filename.txt";
-    anchor.href = window.URL.createObjectURL(blob);
-    anchor.target ="_blank";
-    anchor.style.display = "none"; // just to be safe!
-    document.body.appendChild(anchor);
-    anchor.click();
-    document.body.removeChild(anchor);
- }
+	var file = document.getElementById("myFile").files[0];
+	var reader = new FileReader();
+	reader.onload = function (e) {
+    	var textArea = document.getElementById("myTextArea");
+    	textArea.value = e.target.result;
+};
+reader.readAsText(file);
 </script>
