--- a/flask/templates/submit.html
+++ b/flask/templates/submit.html
@@ -60,7 +60,7 @@
     <p>Output:</p><br>
 
     <textarea class="form-control-file" rows="4" id="inputTextToSave">{{ output }} &#10;&#13;{{ output2 }}</textarea>
-    <p>Name of File: <input id="inputFileNameToSaveAs"></input>
+    <p>Name of File: <input id="inputFileNameToSaveAs">
     <button onclick="saveTextAsFile()">Save Output to File</button>
 </div>
 {% endblock content %}
