--- a/flask/templates/submit.html
+++ b/flask/templates/submit.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="content=section">
     <form class="form" method="POST" action="">
-    	{{ form.hidden_tag()}}
+        {{ form.hidden_tag()}}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Submit FastA</legend>
 
@@ -11,38 +11,33 @@
                 {{ form.fastA(class="form-control-file", rows="4", id="fileToLoad") }}
                 <p>Select a File to Load:</p> <input type="file" id="fileToLoad"> <button onclick="loadFileAsText()">Load Selected File</button>
             </div>
-            <div class ="row" align="center">
-                <div class="form-group col mb-4">
-                    {{ form.lengthOne.label(class_="form-control-label") }}
-                    {{ form.lengthOne(class="form-control") }}
-                    <small class="text-muted">
-                        Should not be smaller than X
-                    </small>
-                </div>
-                <div class="form-group col mb-4">
-                    {{ form.lengthTwo.label(class_="form-control-label") }}
-                    {{ form.lengthTwo(class="form-control") }}
-                    <small class="text-muted">
-                        Should not be larger than X
-                    </small>
-                </div>
+
+            <div class="form-group col mb-4">
+                {{ form.lengthOne.label(class_="form-control-label") }}
+                {{ form.lengthOne(class="form-control") }}
+                <small class="text-muted">
+                    Should not be smaller than X
+                </small>
+
+                {{ form.lengthTwo.label(class_="form-control-label") }}
+                {{ form.lengthTwo(class="form-control") }}
+                <small class="text-muted">
+                    Should not be larger than X
+                </small>
+
+                {{ form.tempOne.label(class_="form-control-label") }}
+                {{ form.tempOne(class="form-control") }}
+                <small class="text-muted">
+                    Should not be smaller than X
+                </small>
+
+                {{ form.tempTwo.label(class_="form-control-label") }}
+                {{ form.tempTwo(class="form-control") }}
+                <small class="text-muted">
+                    Should not be larger than X
+                </small>
             </div>
-            <div class="row" align="center">
-                <div class="form-group col mb-4">
-                    {{ form.tempOne.label(class_="form-control-label") }}
-                    {{ form.tempOne(class="form-control") }}
-                    <small class="text-muted">
-                        Should not be smaller than X
-                    </small>
-                </div>
-                <div class="form-group col mb-4">
-                    {{ form.tempTwo.label(class_="form-control-label") }}
-                    {{ form.tempTwo(class="form-control") }}
-                    <small class="text-muted">
-                        Should not be larger than X
-                    </small>
-                </div>
-            </div>
+
             <div class="row" align="center">
                 <div class="form-group col mb-4">
                     {{ form.maxTile.label(class_="form-control-label") }}
@@ -61,52 +56,48 @@
 
     <textarea class="form-control-file" rows="4" id="inputTextToSave">{{ output }} &#10;&#13;{{ output2 }}</textarea>
     <p>Name of File: <input id="inputFileNameToSaveAs">
-    <button onclick="saveTextAsFile()">Save Output to File</button>
+        <button onclick="saveTextAsFile()">Save Output to File</button>
 </div>
 {% endblock content %}
 
 <script>
-function saveTextAsFile()
-{
-	var textToWrite = document.getElementById("inputTextToSave").value;
-	var textFileAsBlob = new Blob([textToWrite], {type:'text/plain'});
-	var fileNameToSaveAs = document.getElementById("inputFileNameToSaveAs").value;
+    function saveTextAsFile() {
+        var textToWrite = document.getElementById("inputTextToSave").value;
+        var textFileAsBlob = new Blob([textToWrite], {
+            type: 'text/plain'
+        });
+        var fileNameToSaveAs = document.getElementById("inputFileNameToSaveAs").value;
 
-	var downloadLink = document.createElement("a");
-	downloadLink.download = fileNameToSaveAs;
-	downloadLink.innerHTML = "Download File";
-	if (window.webkitURL != null)
-	{
-		// Chrome allows the link to be clicked
-		// without actually adding it to the DOM.
-		downloadLink.href = window.webkitURL.createObjectURL(textFileAsBlob);
-	}
-	else
-	{
-		// Firefox requires the link to be added to the DOM
-		// before it can be clicked.
-		downloadLink.href = window.URL.createObjectURL(textFileAsBlob);
-		downloadLink.onclick = destroyClickedElement;
-		downloadLink.style.display = "none";
-		document.body.appendChild(downloadLink);
-	}
+        var downloadLink = document.createElement("a");
+        downloadLink.download = fileNameToSaveAs;
+        downloadLink.innerHTML = "Download File";
+        if (window.webkitURL != null) {
+            // Chrome allows the link to be clicked
+            // without actually adding it to the DOM.
+            downloadLink.href = window.webkitURL.createObjectURL(textFileAsBlob);
+        } else {
+            // Firefox requires the link to be added to the DOM
+            // before it can be clicked.
+            downloadLink.href = window.URL.createObjectURL(textFileAsBlob);
+            downloadLink.onclick = destroyClickedElement;
+            downloadLink.style.display = "none";
+            document.body.appendChild(downloadLink);
+        }
 
-	downloadLink.click();
-}
+        downloadLink.click();
+    }
 
-function destroyClickedElement(event)
-{
-	document.body.removeChild(event.target);
-}
+    function destroyClickedElement(event) {
+        document.body.removeChild(event.target);
+    }
 
-function loadFileAsText()
-{
-	var fileToLoad = document.getElementById("fileToLoad").files[0];
+    function loadFileAsText() {
+        var fileToLoad = document.getElementById("fileToLoad").files[0];
 
-	var fileReader = new FileReader();
-	fileReader.onload = function(fileLoadedEvent) 
-	{
-		var textFromFileLoaded = fileLoadedEvent.target.result;
-		document.getElementById("inputTextToSave").value = textFromFileLoaded;
-	};
+        var fileReader = new FileReader();
+        fileReader.onload = function(fileLoadedEvent) {
+            var textFromFileLoaded = fileLoadedEvent.target.result;
+            document.getElementById("inputTextToSave").value = textFromFileLoaded;
+        };
+
 </script>
