--- a/flask/templates/home.html
+++ b/flask/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="container-fluid full-size" align="center" style="padding-bottom: 4%;">
-    <h1><b>Oligonucelotide Finder</b></h1>
+    <img src="static/HERO.PNG" style="width=100%; height=100%;">
 </div>
 <div class="row">
     <div class="container col mb-4" align="center">
@@ -11,9 +11,6 @@
             <a href="/submit">Click here to get started!</a> </h3><br>
         <p>You don't have to be crazy to do this but it does help. I'm sort of a softy, I couldn't shoot Bambi except with a camera. Maybe, just to play a little, we'll put a little tree here. Just take out whatever you don't want. It'll change your entire perspective. You have to allow the paint to break to make it beautiful.</p>
         <p>That's what painting is all about. It should make you feel good when you paint. I sincerely wish for you every possible joy life could bring. There's nothing wrong with having a tree as a friend. Only think about one thing at a time. Don't get greedy. You can do anything your heart can imagine. That's a crooked tree. We'll send him to Washington.</p>
-    </div>
-    <div class="container col mb-4" align="center">
-        <img src="static/rna.png" width="360" height="480">
     </div>
 </div>
 <div class="container-fluid">
