--- a/flask/templates/home.html
+++ b/flask/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="container-fluid full-size" align="center" style="padding-bottom: 4%;">
+<div class="full-size" align="center" style="padding-top: -120px; padding-bottom: -120px;">
     <img src="static/HERO.PNG" style="width=100%; height=100%;">
 </div>
 <div class="row">
