--- a/flask/templates/home.html
+++ b/flask/templates/home.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
 {% block content %}
-<img src="static/HERO.PNG" style="width=100%; height=100%;padding-bottom: -120px;padding-top: -120px; ">
+<div class="hero-image">
+<img src="static/HERO.PNG">
+</div>
 <div class="row">
     <div class="container col mb-4" align="center">
         <h3><i>Insert Project Name Here</i> is a novel Bioinformatics algorithm used to design primers for rRNA
