--- a/flask/static/main.css
+++ b/flask/static/main.css
@@ -44,12 +44,11 @@ h1, h2, h3, h4, h5, h6 {
 
   /* Set a specific height */
   height: 50%;
-  margin-left: -100px;
-  margin top: -100px;
-
+  width: auto;
   /* Position and center the image to scale nicely on all screens */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+  object-fit: contain;
 }
