--- a/flask/templates/layout.html
+++ b/flask/templates/layout.html
@@ -43,7 +43,7 @@
             </div>
         </nav>
     </header>
-    <div class="container-fluid">
+    <div>
         {% block content %} {% endblock %}
     </div>
     </body>
