--- a/flask/static/main.css
+++ b/flask/static/main.css
@@ -51,5 +51,5 @@ h1, h2, h3, h4, h5, h6 {
   background-size: cover;
   position: relative;
   object-fit: contain;
-  padding-top: -200px;
+  margin-top: -200px;
 }
