--- a/flask/static/main.css
+++ b/flask/static/main.css
@@ -52,5 +52,5 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
   object-fit: contain;
   margin-top: -200px;
-  margin-bottom: -200px;
+  padding-bottom: -200px;
 }
