--- a/flask/templates/home.html
+++ b/flask/templates/home.html
@@ -2,6 +2,9 @@
 {% block content %}
 <div class="hero-image">
 <img src="static/HERO.PNG">
+    <div class="hero-text">
+    <h1>Oligonucleotide Finder</h1>
+    <p>Lee Lab University of Pittsburgh</p>
 </div>
 
 {% endblock content %}
