--- a/flask/static/main.css
+++ b/flask/static/main.css
@@ -39,13 +39,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .hero-image {
-  /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("static/HERO.PNG");
-
-  /* Set a specific height */
   height: 40%;
   width: 100%;
-  /* Position and center the image to scale nicely on all screens */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -53,4 +49,12 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: -200px;
   overflow:hidden;
   object-fit: contain;
+}
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
 }
